# structured-grids-stencils-on-ipu

./: LICENSE  README.md
BabelStream/: README.md
ExampleApps/: .gitignore  CMakeLists.txt  README.md
ExampleApps/images/: CREDITS.md
ExampleApps/main/: CMakeLists.txt  GaussianBlurCpu.cpp  GaussianBlurLowLevel.cpp  GaussianBlurPoplibs.cpp  HaloRegionApproaches.cpp  LbmAoS.cpp  LbmCpu.cpp  TileMappingStats.cpp  VisualiseTileMapping.cpp
ExampleApps/main/codelets/: D2Q9Codelets.cpp  GaussianBlurCodelets.cpp  GaussianBlurCodeletsVectorised.cpp  HaloRegionApproachesCodelets.cpp
ExampleApps/main/include/: DoubleRoll.hpp  ImageUtils.hpp  LatticeBoltzmannUtils.hpp  LbmParams.hpp  StructuredGridUtils.hpp
OpenCLStencil/: CMakeLists.txt  StencilUtils.hpp  build.sh  main.cpp
